<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LimeText</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello Lime!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lime_edit">LimeEdit</string>
    <string name="title_activity_lime_text">LimeText</string>
    <string name="untitled">Untitled</string>
    <string name="file_save">Save</string>
    <string name="save_as">Save as</string>
    <string name="open">Open</string>
    <string name="open_recent">Open recent</string>
    <string name="about">About</string>
    <string name="onSaveMessage">File saved</string>
    <string name="dialog_save_file">Save</string>
    <string name="cancel">Cancel</string>
    <string name="defaultFilePath">/sdcard/</string>
    <string name="filename_label">File name:</string>
    <string name="open_recent_files">Recent files</string>

</resources>
