<?xml version="1.0" encoding="UTF-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/save"
        android:orderInCategory="10"
        android:icon="@drawable/icon_save" 
        android:title="@string/file_save"
        android:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/save_as"
        android:orderInCategory="20"
        android:icon="@drawable/icon_saveas"
        android:title="@string/save_as" 
        android:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/open"
        android:orderInCategory="30"
        android:icon="@drawable/icon_open"
        android:title="@string/open"
        />
    <item
        android:id="@+id/recent_opened"
        android:orderInCategory="40"
        android:icon="@drawable/icon_openrecent"
        android:title="@string/open_recent"
        />
    <item
        android:id="@+id/about"
        android:orderInCategory="50"
        android:icon="@drawable/icon_options"
        android:title="@string/about"
        />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:icon="@drawable/icon_save" 
        android:title="@string/menu_settings"
        />

</menu>